--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^9.6.0",
+		"auto": "^11.3.0",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -55,5 +56,12 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.11"
+	},
+	"repository": "oliver-isaac/sappho",
+	"auto": {
+		"plugins": [
+			"npm",
+			"all-contributors"
+		]
 	}
 }
