--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,6 @@
 		"strict": true,
 		"module": "NodeNext",
 		"moduleResolution": "NodeNext",
-		"allowImportingTsExtensions": true,
-		"noEmit": true
+		"allowImportingTsExtensions": true
 	}
 }
